Actualización de controladores y modelos, para guardar el sub de token de google

--- a/public/index.html
+++ b/public/index.html
@@ -13,13 +13,14 @@
     <div style="display: flex; justify-content: space-between;">
 
         <h3>Sirviendo contenido estático desde NodeJs</h3>
-        <button type="button" id="google-logout" style="display: inline-block;padding: 5px;width: 80px;border: none;background-color: red;border-radius: 5px;line-height: 1.5;color: #fff;cursor: pointer;">Salir</button>
+        <button type="button" id="google-logout"
+            style="display: inline-block;padding: 5px;width: 80px;border: none;background-color: red;border-radius: 5px;line-height: 1.5;color: #fff;cursor: pointer;">Salir</button>
     </div>
 
 
 
     <div id="g_id_onload" data-client_id="695911249328-9sjjsmkunud5q84gelfujd7mepoc3l4d.apps.googleusercontent.com"
-        data-callback="handleCredentialResponse" data-auto_prompt="false">
+        data-login_uri="http://localhost:3000/inicio"  data-ux_mode="redirect" data-auto_prompt="false">
     </div>
     <div class="g_id_signin" data-type="standard" data-size="large" data-theme="outline" data-text="sign_in_with"
         data-shape="rectangular" data-logo_alignment="center">
@@ -44,7 +45,7 @@
                 .then(resp => {
 
                     console.log(resp);
-                    location.href='http://localhost:3000/api/usuarios/bienvenido'
+                    //location.href='http://localhost:3300/inicio.html'
                 })
                 .catch(error => console.log(error))
         }
@@ -53,10 +54,10 @@
         const btnLogout = document.getElementById('google-logout')
         btnLogout.onclick = () => {
 
-            google.accounts.id.revoke('juliochirinosacurero@gmail.com', done =>{
+            google.accounts.id.revoke('juliochirinosacurero@gmail.com', done => {
                 location.reload()
             })
-            
+
 
         }
 
